[project]
name = "salted-fish-auto-reply"
version = "0.1.0"
description = "闲鱼自动回复程序:多账号值守 + 关键词/LLM 自动回复 + React 管理后台"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    # Web 框架与 ASGI 服务
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # 数据层
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # 配置与校验
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # HTTP 客户端
    "httpx>=0.27",
    # 日志
    "loguru>=0.7",
    # ---- vendor XianYuApis 运行依赖 ----
    "requests>=2.31",
    # websockets 14 移除了 extra_headers(改名 additional_headers),此处锁定 <14 保持 vendor 源码可用
    "websockets>=12,<14",
    "blackboxprotobuf>=1.0",
    "PyExecJS>=1.5.1",
    "typing_extensions>=4.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# 后端代码统一使用更宽松的行宽
[tool.ruff]
line-length = 110
